# gwas-pw

./: Makefile  Makefile.in  README.md  config.h  config.status  configure  configure.ac  fgwas.params  test.llk
R/: MRMR.R  MRMR2.R  MRMR3.R  approxBF.R  plotting_funcs.R  sim.R  t
example_data/: all_fourier_ls.bed
sims/: approxBF.R  plotall_c-4.R  plotall_c0.R  sim.R  simmany.R  simmany_m0.R  simmany_m1.R  simmany_m1_c-4.R  simmany_m2.R  simmany_m2_c-4.R  simmany_m3.R  simmany_m3_c-4.R  stephens.R
src/: LDmatrix.cpp  LDmatrix.h  Makefile  Makefile.am  Makefile.in  SNP.cpp  SNP.h  SNP_PW.cpp  SNP_PW.h  SNPs.cpp  SNPs.h  SNPs_PW.cpp  SNPs_PW.h  fgwas  fgwas.cpp  fgwas_params.cpp  fgwas_params.h  gwas-pw.cpp  gwaspw_params.cpp  gwaspw_params.h  test.cpp
src/.deps/: CmdLine.Po  SNP.Po  SNP_PW.Po  SNPs.Po  SNPs_PW.Po  fgwas.Po  fgwas_params.Po  gzstream.Po
